Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Library Database Project</title>
-  <link rel="stylesheet" href="style.css" />
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
@@ -144,3 +144,4 @@
   </script>
 </body>
 </html>
+
